--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "graphql": "^16.8.1",
+    "graphql-react": "^20.0.0",
+    "graphql-request": "^7.0.1",
+    "html-react-parser": "^5.1.10",
+    "moment": "^2.30.1",
+    "next": "14.2.1",
+    "next-graphql-react": "^16.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-multi-carousel": "^2.8.5",
+    "sass": "^1.77.2"
   },
   "devDependencies": {
     "postcss": "^8",
