--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-graphql-react": "^16.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "sass": "^1.77.2"
   },
