--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "graphql": "^16.8.1",
     "graphql-react": "^20.0.0",
     "graphql-request": "^7.0.1",
