--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
