--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "sass": "^1.77.2",
     "uuid": "^10.0.0"
   },
