--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-project-next14",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +17,7 @@
     "graphql-request": "^7.0.1",
     "html-react-parser": "^5.1.10",
     "moment": "^2.30.1",
-    "next": "14.2.1",
+    "next": "^14.2.4",
     "next-graphql-react": "^16.0.0",
     "react": "^18",
     "react-dom": "^18",
